--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,5 @@
 [package]
-#name = "{{project-name}}"
-name = "template"
+name = "{{project-name}}"
 version = "0.1.0"
 authors = ["{{authors}}"]
 license = "MIT"
